Fix line wrapping when length exceeds container

--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,7 @@ h2 {
   justify-self: center;
   box-shadow: var(--fancyShadowOutset);
   color: rgb(83, 76, 57);
+  word-break: break-all;
 }
 .iconDiv {
   display: none;
@@ -104,7 +105,6 @@ h2 {
   flex-grow: 1;
   font-size: 1.2rem;
   text-justify: center;
-
   padding: 5px 0;
 }
 
@@ -141,7 +141,6 @@ input:not(:focus) {
 #infoContainer {
   grid-area: infoContainer;
   justify-self: center;
-
   padding: 0;
 }
 #bookInfo {
@@ -156,8 +155,11 @@ input:not(:focus) {
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+  gap: 10px;
 }
-
+.dataInfo {
+  word-break: break-all;
+}
 #infoHeader {
   background-color: rgb(93, 89, 75);
   color: #c5c1ab;
